# Dread

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
cmake/: IDA.cmake
src/: CMakeLists.txt
src/ast-parser/: CMakeLists.txt
src/ast-parser/AST/: Analyzer.hpp  Explorer.hpp
src/dreadful/: CMakeLists.txt  Plugin.cpp
src/dreadful-ast-parser/: CMakeLists.txt  README.md
src/dreadful-ast-parser/AST/: Analyzer.cpp  Analyzer.hpp  Attributes.cpp  Attributes.hpp  Explorer.cpp  Explorer.hpp
src/dreadful-cli/: CMakeLists.txt  Program.cpp
src/dreadful-plugin/: Analyzer.cpp  Analyzer.hpp  CMakeLists.txt  Plugin.cpp  README.md
src/dreadful-plugin-clang-base/: CMakeLists.txt
src/dreadful-plugin-clang-base/AST/: Analyzer.cpp  Analyzer.hpp  Matchers.cpp  Matchers.hpp
src/dreadful-plugin-dump/: CMakeLists.txt  Program.cpp
src/dreadful-plugin-ida-base/: CMakeLists.txt  README.md
src/dreadful-plugin-ida-base/IDA/API/: Function.cpp  Function.hpp  Persistence.cpp  Persistence.hpp  Type.cpp  Type.hpp
src/dreadful-plugin-ida-base/Utils/: Exporter.cpp
src/dreadful-plugin-interface/: CMakeLists.txt
src/dreadful-plugin-interface/IDA/API/: DecompilationException.hpp
src/dreadful-plugin-interface/Utils/: Exporter.cpp  Exporter.hpp
src/dreadful-plugin-shared-base/: CMakeLists.txt
src/dreadful-plugin-shared-base/CallableTraits/: CallableTraits.hpp
src/dreadful-plugin-shared-base/TypeTraits/: TypeSequence.hpp
src/dreadful-plugin/Dread/: CRC.hpp  Utilities.hpp
src/dreadful-plugin/Dread/CRC/: Engine.hpp
src/dreadful-plugin/Dread/Reflection/: CClass.cpp  CClass.hpp  CCollectionType.cpp  CCollectionType.hpp  CEnumType.cpp  CEnumType.hpp  CFlagsetType.cpp  CFlagsetType.hpp  CPointerType.cpp  CPointerType.hpp  CType.cpp  CType.hpp  ReflInfo.cpp  ReflInfo.hpp  Shared.cpp  Shared.hpp
src/dreadful/Analyzers/: Analyzers.cpp  Analyzers.hpp  Mangler.cpp  Mangler.hpp  ReflectiveType.hpp
src/dreadful/IDA/API/: API.cpp  API.hpp
src/dreadful/IDA/Microcode/: Instructions.hpp  Microcode.hpp
src/dreadful/utils/: EnumFlags.hpp  Generator.hpp
src/dreadful2/: Analyzer.cpp  Analyzer.hpp  CMakeLists.txt  Plugin.cpp  SyntaxTreeVisitor.cpp  SyntaxTreeVisitor.hpp
src/dreadful2/Dread/: CRC.hpp
src/dreadful2/IDA/: API.hpp  Exception.hpp
src/dreadful2/IDA/API/: Function.cpp  Function.hpp  Type.cpp  Type.hpp
src/framework/: CMakeLists.txt  Types.hpp
src/nxo-loader-cpp/: CMakeLists.txt  Module.cpp  Module.hpp  Program.cpp  README.md
